--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datamodel-code-generator>=0.26.3",
     "fastapi[standard]>=0.115.6",
     "prisma>=0.15.0",
 ]
